@@ -900,18 +900,24 @@ public class UniLog extends DeviceConfiguration implements IDevice {
 			int prop_n100W = property != null ? Integer.valueOf(property.getValue()) : 10000;
 			recordCurrent = recordSet.get(2); // 2=current
 			Record recordA1 = recordSet.get(11); // 11=A1 -> torque
+			double eta = 0.;
 			for (int i = 0; i < recordRevolution.size(); i++) {
-				if (i > 1 && recordRevolution.get(i)> 100000 && recordCurrent.get(i) > 3000) { //100 1/min && 3A
-					double motorPower = (prop_n100W == 99999 // A1 -> torque
-							? 2 * Math.PI * (recordA1.get(i)/1000.) * (recordRevolution.get(i)/1000.) / ((recordVoltage.get(i)/1000.) * (recordCurrent.get(i)/1000.) * 60)
-							: Math.pow(((recordRevolution.get(i) * rpmFactor / numberMotor) / 1000.0 * 4.64) / prop_n100W, 3)) * 1000.0;
-					double eta = motorPower * 100.0 / recordPower.get(i);
-					eta = eta > 100 ? record.lastElement()/1000.0 : eta < 0 ? 0 : eta;
-					if (log.isLoggable(Level.FINER))
-						log.log(Level.FINER, String.format("current=%5.1f; recordRevolution=%5.0f; recordPower=%6.2f; motorPower=%6.2f eta=%5.1f", recordCurrent.get(i)/1000.0, recordRevolution.get(i)/1000.0, recordPower.get(i)/1000.0, motorPower/1000.0, eta));
+				if (i > 1 && recordRevolution.get(i) > 100000 && recordCurrent.get(i) > 3000) { //100 1/min && 3A
+					if (prop_n100W == 99999) { // A1 -> torque
+						eta = (2 * Math.PI * (this.translateValue(recordA1, recordA1.get(i) / 1000.)) * (recordRevolution.get(i) / 1000.)) / ((recordVoltage.get(i) / 1000.) * (recordCurrent.get(i) / 1000.) * 60.);
+						log.log(Level.OFF, String.format("(2 * %4.3f * %3.1fNcm * %5.0frpm) / (%3.1fV * %3.1fA * 60 * 100) = %4.2f", Math.PI, (this.translateValue(recordA1, recordA1.get(i) / 1000.)), (recordRevolution.get(i) / 1000.), (recordVoltage.get(i) / 1000.), (recordCurrent.get(i) / 1000.), eta));
+					}
+					else {
+						double motorPower = Math.pow(((recordRevolution.get(i) * rpmFactor / numberMotor) / 1000.0 * 4.64) / prop_n100W, 3) * 1000.0;
+						eta = motorPower * 100.0 / recordPower.get(i);
+						eta = eta > 100 ? record.lastElement() / 1000.0 : eta < 0 ? 0 : eta;
+						if (log.isLoggable(Level.FINER)) log.log(Level.FINER, String.format("current=%5.1f; recordRevolution=%5.0f; recordPower=%6.2f; motorPower=%6.2f eta=%5.1f", recordCurrent.get(i) / 1000.0,
+								recordRevolution.get(i) / 1000.0, recordPower.get(i) / 1000.0, motorPower / 1000.0, eta));
+					}
 					record.add(Double.valueOf(eta * 1000).intValue());
 				}
-				else record.add(0);
+				else
+					record.add(0);
 				if (log.isLoggable(Level.FINEST)) log.log(Level.FINEST, "adding value = " + record.get(i)); //$NON-NLS-1$
 			}
 			if (recordRevolution.isDisplayable() && recordPower.isDisplayable()) {
