@@ -1382,6 +1382,7 @@ public class UniLogConfigTab extends org.eclipse.swt.widgets.Composite {
 						UniLogConfigTab.this.application.updateGraphicsWindow();
 						activeRecordSet.setUnsaved(RecordSet.UNSAVED_REASON_CONFIGURATION);
 					}
+					UniLogConfigTab.this.setConfigButton.setEnabled(true);
 				}
 				UniLogConfigTab.this.powerGroup.redraw();
 				UniLogConfigTab.this.axModusGroup.redraw();
