@@ -29,7 +29,8 @@ Device specific changes/fixes
 	* UniSens-E - enable live data gathering
 	* iMax B6* - fix missing energy calculation Ni battery type outside cycle
 	* MC3000 - fix to short wait time for possible adjustable rest time
-	* UniLog(1) * fix raw CSV export/import, use special eta calculation while n100W 99999
+	* UniLog(1) * fix raw CSV export/import
+	* UniLog* * enable special efficiency calculation while n100W 99999, A1 torque input [Ncm]
 	* JetiAdapter - fix measurement name and unit related data type parser "Geschwindigkeit [kmh]"
 
 Version 3.4.1 - 03 Feb 2020
